--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-          <img src="producto6.jpg" class="card-img-top" alt="Producto 6">
+          <img src="./assets/img/nintendo.png" class="card-img-top" alt="Producto 6">
           <div class="card-body">
-            <h5 class="card-title">Producto 6</h5>
-            <p class="card-text">Descripción del producto.</p>
-            <a href="#" class="btn btn-primary">Agregar al Carrito</a>
+            <h5 class="card-title">Consola Nintendo Switch Mario Bundle 32GB</h5>
+            <p class="card-text">La consola Nintendo Switch está diseñada para cualquier estilo de vida, transformándose rápidamente de una consola casera a una consola portátil..</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
             <div class="product-details">
-              <p>Precio: $35</p>
+              <p>Precio: $800.000</p>
               <p>Disponibilidad: En Stock</p>
             </div>
           </div>
@@ -133,13 +133,13 @@
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-          <img src="producto7.jpg" class="card-img-top" alt="Producto 7">
+          <img src="./assets/img/xiaomi.png" class="card-img-top" alt="Producto 7">
           <div class="card-body">
-            <h5 class="card-title">Producto 7</h5>
-            <p class="card-text">Descripción del producto.</p>
-            <a href="#" class="btn btn-primary">Agregar al Carrito</a>
+            <h5 class="card-title">Xiaomi Mi Home Projector Lite</h5>
+            <p class="card-text">XIAOMI T2 Wanbo MAX ORIGINAL..!!!.. Uno de los más pequeños y livianos Proyectores Video Beams del mercado Calidad/precio en FULLHD NATIVO 1920x1080.</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
             <div class="product-details">
-              <p>Precio: $40</p>
+              <p>Precio: $990.000</p>
               <p>Disponibilidad: En Stock</p>
             </div>
           </div>
@@ -147,13 +147,13 @@
       </div>
       <div class="col-md-3">
         <div class="card product-card">
-          <img src="producto8.jpg" class="card-img-top" alt="Producto 8">
+          <img src="./assets/img/bose.png" class="card-img-top" alt="Producto 8">
           <div class="card-body">
-            <h5 class="card-title">Producto 8</h5>
-            <p class="card-text">Descripción del producto.</p>
-            <a href="#" class="btn btn-primary">Agregar al Carrito</a>
+            <h5 class="card-title">BOSE Sistema S1 PRO con Batería - LFL Audio</h5>
+            <p class="card-text">El robusto S1 Pro te dará el mejor sonido para tu fiesta, tu maletero o tu reunión en exteriores..</p>
+            <a href="#" class="btn btn-primary">Comprar</a>
             <div class="product-details">
-              <p>Precio: $45</p>
+              <p>Precio: $1.350.000</p>
               <p>Disponibilidad: En Stock</p>
             </div>
           </div>
